--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,26 @@
-aioredis==1.0.0
-asgi-redis==1.4.3
-asgiref==2.1.6
-asn1crypto==0.24.0
-async-timeout==2.0.0
-attrs==17.4.0
-autobahn==17.10.1
+aioredis==1.1.0
+asgiref==2.3.0
+async-timeout==2.0.1
+attrs==18.1.0
+autobahn==18.5.1
 Automat==0.6.0
-certifi==2017.7.27.1
-cffi==1.11.5
-channels==2.0.2
-channels-redis==2.1.0
-chardet==3.0.4
-confusable-homoglyphs==2.0.2
+certifi==2018.4.16
+channels==2.1.1
+channels-redis==2.2.0
 constantly==15.1.0
-cryptography==2.1.4
-daphne==2.0.4
-defusedxml==0.5.0
-dj-database-url==0.4.2
-dj-static==0.0.6
-Django==2.0.2
-django-admin-bootstrapped==2.5.7
-django-authtools==1.6.0
-django-braces==1.12.0
-django-crispy-forms==1.7.0
-django-debug-toolbar==1.9.1
-django-environ==0.4.4
-django-registration==2.3
-django-toolbelt==0.0.1
-easy-thumbnails==2.5
-gunicorn==19.7.1
-h2==3.0.1
+daphne==2.1.1
+dj-database-url==0.5.0
+Django==2.0.5
+django-heroku==0.3.1
 hiredis==0.2.0
-hpack==3.0.0
-hyperframe==5.1.0
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
 msgpack==0.5.6
-msgpack-python==0.5.5
-oauthlib==2.0.6
-olefile==0.44
-Pillow==4.3.0
-priority==1.3.0
-psycopg2==2.7.3.1
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycparser==2.18
-PyJWT==1.5.3
-pyOpenSSL==17.5.0
-python3-openid==3.1.0
-pytz==2017.3
-redis==2.10.6
-requests==2.18.4
-requests-oauthlib==0.8.0
-service-identity==17.0.0
+psycopg2==2.7.4
+pytz==2018.4
 six==1.11.0
-social-auth-app-django==1.2.0
-social-auth-core==1.4.0
-sqlparse==0.2.4
-static3==0.7.0
-style==1.1.0
-Twisted==17.9.0
-txaio==2.8.2
-update==0.0.1
-urllib3==1.22
-websocket-client==0.47.0
-Werkzeug==0.13
+Twisted==18.4.0
+txaio==2.10.0
 whitenoise==3.3.1
-zope.interface==4.4.3
+zope.interface==4.5.0
