--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,36 @@
 aioredis==1.1.0
 asgiref==2.3.0
+asn1crypto==0.24.0
 async-timeout==2.0.1
 attrs==18.1.0
 autobahn==18.5.1
 Automat==0.6.0
 certifi==2018.4.16
+cffi==1.11.5
 channels==2.1.1
 channels-redis==2.2.0
 constantly==15.1.0
+cryptography==2.2.2
 daphne==2.1.1
 dj-database-url==0.5.0
 Django==2.0.5
 django-heroku==0.3.1
+h2==3.0.1
 hiredis==0.2.0
+hpack==3.0.0
+hyperframe==5.1.0
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
 msgpack==0.5.6
+priority==1.3.0
 psycopg2==2.7.4
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.18
+pyOpenSSL==18.0.0
 pytz==2018.4
+service-identity==17.0.0
 six==1.11.0
 Twisted==18.4.0
 txaio==2.10.0
