--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ cryptography==2.2.2
 daphne==2.1.1
 dj-database-url==0.5.0
 Django==2.0.5
+django-ckeditor==5.4.0
 django-heroku==0.3.1
+django-js-asset==1.1.0
 h2==3.0.1
 hiredis==0.2.0
 hpack==3.0.0
@@ -23,6 +25,7 @@ hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
 msgpack==0.5.6
+Pillow==5.1.0
 priority==1.3.0
 psycopg2==2.7.4
 pyasn1==0.4.2
